<resources>
    <string name="app_name">Got Any Idea</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="createaccout">Não tem uma conta? Clique aqui.</string>
    <string name="name">Nome</string>
    <string name="newpost">Nova postagem ...</string>
    <string name="ideiapost">Que idéia você tem hoje?</string>
    <string name="post">POSTAR</string>
    <string name="tagtec">TECNOLOGIA</string>
    <string name="taggamb">GAMBIARRA</string>
    <string name="tagarte">ARTES</string>
    <string name="tagsexo">NFSW</string>
    <string name="tagaliment">ALIMENTO</string>
    <string name="nullimage">Tirar imagem</string>
    <string name="tagculinaria">CULINARIA</string>
    <string name="numlikes">0</string>
    <string name="comentario">Comentar ...</string>
    <string name="enviar">enviar</string>
    <string name="register">criar conta</string>
    <string name="createlabel">Nova publicação</string>
    <string name="editlabel">Editar publicação</string>
    <string name="registerlabel">Registre - se</string>
    <string name="loginlabel">Login</string>
    <string name="comentlabel">Comentários</string>
    <string name="profilelabel">Perfil</string>
    <string name="delaccout">🗑️ Deletar conta</string>
    <string name="aditlabel">Editar</string>
    <string name="logout">logout</string>
    <string name="btneditprofile">✏️Editar perfil</string>
    <string name="editprofilelabel">Editar perfil</string>
    <string name="namesub">Nome:</string>
    <string name="photousersub">Foto de perfil</string>
    <string name="confirm">️Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="loadtitle">aguarde...</string>
    <string name="qdelaccout">Tem certeza que deseja deletar sua conta?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>

</resources>