<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:background="@color/azul_denim"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/qdelaccout"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_rounded"
            android:text="@string/yes"
            android:textColor="#FF0000"
            android:textSize="18sp"
            app:backgroundTint="@color/purple1000" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_not"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_rounded"
            android:text="@string/not"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/purple1000" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="400dp"
        android:layout_height="wrap_content" />
</LinearLayout>