<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo_createpost_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/teal_700"
                android:layout_marginTop="6dp"
                android:src="@drawable/pf_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pf_default"
                tools:srcCompat="@drawable/pf_default" />

            <TextView
                android:id="@+id/txt_createpost_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="TextView"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/photo_createpost_user"
                app:layout_constraintEnd_toStartOf="@+id/select_photo_post"
                app:layout_constraintStart_toEndOf="@+id/photo_createpost_user"
                app:layout_constraintTop_toTopOf="@+id/photo_createpost_user" />

            <ImageView
                android:id="@+id/select_photo_post"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/select_photo2_icon"
                app:layout_constraintBottom_toBottomOf="@+id/photo_createpost_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/photo_createpost_user"
                app:srcCompat="@drawable/select_photo2_icon"
                tools:srcCompat="@drawable/select_photo2_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/cx_createpost_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/ideiapost"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/photo_createpost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:src="@tools:sample/avatars" />




    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPost"
        tools:layout_editor_absoluteX="-16dp">



        <CheckBox
            android:id="@+id/check_tag_tecnologia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/tagtec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_tag_alimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/tagaliment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_tag_tecnologia"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_tag_arte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tagarte"
            app:layout_constraintStart_toStartOf="@+id/check_tag_tecnologia"
            app:layout_constraintTop_toBottomOf="@+id/check_tag_tecnologia" />

        <CheckBox
            android:id="@+id/check_tag_gambiarra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/taggamb"
            app:layout_constraintStart_toStartOf="@+id/check_tag_alimento"
            app:layout_constraintTop_toBottomOf="@+id/check_tag_alimento" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-13dp" />

</androidx.constraintlayout.widget.ConstraintLayout>